--- a/LP-vite/package.json
+++ b/LP-vite/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@salesforce-ux/design-system": "^2.23.2",
     "blocksdk": "^1.3.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tiny-editor": "^0.3.0"
   }
 }
